# coreclr

./: CMakeLists.txt
src/corefx/: CMakeLists.txt
src/corefx/System.Security.Cryptography.Native/: CMakeLists.txt  openssl.c
src/interop/cryptography/: CMakeLists.txt  netcrypto.h  openssl.c
src/netcrypto/: CMakeLists.txt  openssl.c
src/pal/src/: CMakeLists.txt
src/pal/src/misc/: corefx.cpp
